# flask_aws_gemini

./: README.md  main.py  pyproject.toml  requirements.txt
templates/: index.html
